fixed overflow error

--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,9 @@ input,
 #reset,
 #resetRecent,
 #submit {
-  font-family: 'Oswald', monospace;
+  font-family: "Oswald", monospace;
   font-weight: 600;
-  letter-spacing: .1vw;
+  letter-spacing: 0.1vw;
   width: 30vw;
   border-radius: 0.25vw;
   margin: 0.3vw;
@@ -89,15 +89,15 @@ input,
     border-radius: 1.5vw;
   }
   input,
-#reset,
-#resetRecent,
-#submit{
-  width: 35vw;
-}
-#reset,
-#resetRecent {
-  width: 17.2vw;
-}
+  #reset,
+  #resetRecent,
+  #submit {
+    width: 35vw;
+  }
+  #reset,
+  #resetRecent {
+    width: 17.2vw;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -118,15 +118,14 @@ input,
   input,
   #reset,
   #resetRecent,
-  #submit{
+  #submit {
     width: 62vw;
-    margin: .8vw;
-
+    margin: 0.8vw;
   }
   #reset,
   #resetRecent {
     width: 30.7vw;
-    margin: .8vw .4vw;
+    margin: 0.8vw 0.4vw;
   }
 }
 
@@ -164,7 +163,6 @@ input,
   translate: -50vh -50vw;
 }
 
-
 @keyframes rot {
   0% {
     transform: rotate(0);
@@ -180,10 +178,10 @@ input,
   margin: 0.5rem auto;
   text-align: center;
   font-size: 1.5rem;
+  word-break: break-word;
 }
 
 .title {
   font-weight: 800;
   font-size: 1.7rem;
-
 }
